@@ -44,10 +44,17 @@ var Db = exports.Db = function(databaseName, serverConfig, options) {
   this.notReplied ={};
   this.isInitializing = true;
   this.auths = [];
+  this.logger = options.logger != null 
+    && (typeof options.logger.debug == 'function') 
+    && (typeof options.logger.error == 'function') 
+    && (typeof options.logger.debug == 'function') 
+      ? options.logger : {error:function(message, object) {}, log:function(message, object) {}, debug:function(message, object) {}};
   // Allow slaveOk
   this.slaveOk = this.options["slave_ok"] == null ? false : this.options["slave_ok"];
   
   var self = this;
+  // Associate the logger with the server config
+  this.serverConfig.logger = this.logger;
   // Add a listener for the reconnect event
   this.serverConfig.on("reconnect", function() {
     // Number of current auths
